2005-07-07  Jacob Smullyan  <smulloni@smullyan.org>

	* tests/test_operators.py (test_converter1): test for raw strings
	with embedded single quotes, with and without a converter.
	Partial test for berlios bug # 4468.

	* src/pydo/operators.py (SQLOperator._convert, sqlquote): handles
	raw strings better when there is no BindingConverter.  Partial fix
	for berlios bug #4468.

2005-07-06  Jacob Smullyan  <smulloni@smullyan.org>

	* tests/test_fields.py (test_getattr1): test for
	getattr(myPyDOSubclass, fieldname).

	* src/pydo/field.py (Field.__get__): deal with the case of obj
	being None (for the sake of pydoc, which tries to call the
	descriptor on the class object).  Thanks to Adam Ward for bug
	report. 

2005-07-05  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/operators.py (_repr_single_and_or): hack so that AND
	and OR will work with a single argument (berlios bug #4448).

	* tests/test_operators.py: test for AND with a single argument
	(berlios bug #4448).

2005-07-05  Jacob Smullyan  <smulloni@smullyan.org>

	* tests/test_base.py (test_getSome2): test for berlios bug #4445.

	* src/pydo/base.py (PyDO._processWhere): fix for berlios bug #4445:
	obj.getSome(x=None) should generate SQL "x IS NULL".

2005-07-01  Hamish Lawson  <hbl@st-andrews.ac.uk>

	* src/pydo/drivers/oracleconn.py: use fetchall (rather than iterating over
	cursor) when resultset doesn't contain LOBs; replace OracleResultSet 
    class with OracleDBI.field_values method.

2005-07-01  Jacob Smullyan  <smulloni@smullyan.org>

	* ACKNOWLEDGEMENTS: added Robin Brandt, and added notes detailing
	contributions. 

2005-06-29  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/base.py (PyDO.getSome): tolerate group by statements in
	sql strings.

	* tests/test_base.py (test_group1): test for toleration of group
	by statements.

2005-06-27  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/drivers/psycopgconn.py: autocommit implementation for
	psycopg version 1.
