@@ -9,10 +9,12 @@ the moment.)
 """
 from testingtesting import tag
 import config
+from fixture import base_fixture
 
 alltags=config.ALLDRIVERS + ['operators']
 
 from pydo.operators import *
+import pydo as P
 
 @tag(*alltags)
 def test_AND1():
@@ -27,3 +29,24 @@ def test_converter1():
     s=str(op)
     assert s=="(x AND (y = ?))"
     assert c.values==["fiddler's roof"]
+
+
+
+class test_converter2(base_fixture):
+    usetables=['E']
+    tags=alltags
+
+    def pre(self):
+        self.E.new(user1="doo'ood", user2='crinkle')
+        self.E.new(user1="snoozer's zzzs", user2='hoho')
+
+    def run(self):
+        match=SQLOperator(('LIKE', FIELD('user1'), "doo'oo%"))
+        res=self.E.getSome(match)
+        assert len(res)==1
+        match = AND(SQLOperator(('LIKE', FIELD('user1'), "snoozer's%")),
+                    SQLOperator(('=', FIELD('user2'), "hoho")))
+        res=self.E.getSome(match)
+        assert len(res)==1
+
+
